--- a/index.html
+++ b/index.html
@@ -62,6 +62,49 @@
             </div>
         </div>
     </section class="main">
+     <section class="container section1" >
+        <div class="flex">
+            <div>
+                <h2 class="section1_title"><br> Grow 2.5x faster than</br> your competitors</h2>
+            </div>
+            <div>
+                <img src="./img/section2_1.svg" alt="loop">
+                <h5 class="commerce_pretitle1">
+                    River island
+                </h5>
+                <p class="commerce_text">River Island transforms the customer experience with personalization.</p>
+               
+        </div>
+    </section>
+    
+    <section class="container commerce">
+        <h2 class="commerce_title">
+            Qubit CommerceAI.
+        </h2>
+        <div class="flex">
+            <div>
+            <img src="./img/lopo2.svg" alt="loop">
+            <h5 class="commerce_pretitle">
+                More insight
+            </h5>
+            <p class="commerce_text">Learn which products drive performance and which don't, through automated insights you can action.</p>
+            </div>
+            <div>
+                <img src="./img/lopo.svg" alt="loop">
+                <h5 class="commerce_pretitle">
+                    More personal
+                </h5>
+                <p class="commerce_text">Qubit CommerceAI generates a model per shopper to make every customer interaction more relevant.</p>
+                </div>
+                <div>
+                    <img src="./img/lopo3.svg" alt="loop">
+                    <h5 class="commerce_pretitle">
+                        More effective
+                    </h5>
+                    <p class="commerce_text">Qubit fuses data, intent, and design tools to enable your team to create more effective customer experiences.</p>
+                    </div>
+    </div>
+    </section>
     <footer class="footer">
         <div class="container flex">
            <nav>
@@ -93,7 +136,6 @@
                 Book a demo
             </Button>
           </div>
-        </div>
     </footer>
 </body>
 </html>
